--- a/style.css
+++ b/style.css
@@ -40,3 +40,36 @@ h1, h2, h3, h4, h5, h6 {
 .navbar .nav-link:hover {
     color: var(--mocha);
 }
+
+/* banner */
+.banner {
+    background-image: url(img/banner.jpg);
+    height: 80vh;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+}
+.banner .row {
+    height: 80vh;
+}
+.banner h2 {
+    color: var(--orange);
+    margin-bottom: 30px;
+    font-size: 1.5rem;
+}
+.bannerBtn {
+    text-decoration: none;
+    font-size: 20px;
+    padding: 15px 25px;
+    border: 2px solid var(--orange);
+    background: transparent;
+    text-transform: uppercase;
+    color: white;
+    margin: 0 10px;
+    transition: var(--transition);
+}
+.bannerBtn:hover {
+    text-decoration: none;
+    background: var(--orange);
+    color: black;
+}
