--- a/style.css
+++ b/style.css
@@ -42,17 +42,28 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* banner */
-.banner {
-    background-image: url(img/banner.jpg);
+#banner {
+    background-image: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.99)),url(img/banner.jpg);
     height: 80vh;
     background-position: center;
     background-size: cover;
-    text-align: center;
+    position: relative;
 }
-.banner .row {
+#banner::after {
+    content:"";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: black;
+    transform: skewY(10deg);
+    transform-origin: left bottom;
+    bottom: 0;
+    z-index: -1;
+}
+#banner .row {
     height: 80vh;
 }
-.banner h2 {
+#banner h2 {
     color: var(--orange);
     margin-bottom: 30px;
     font-size: 1.5rem;
@@ -73,3 +84,21 @@ h1, h2, h3, h4, h5, h6 {
     background: var(--orange);
     color: black;
 }
+.bannerIcons {
+    margin-top: -100px;
+}
+.bannerIcons ul li {
+    background: var(--orange);
+    margin: 0 10px;
+    padding: 10px;
+    color: white;
+}
+
+.bannerIcons ul li i {
+    font-size: 50px;
+    transition: var(--transition);
+}
+.bannerIcons ul li i:hover {
+    color: black;
+}
+
