--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Ubuntu', sans-serif;
 }
-
+.py-5 {
+    padding: 100px 0 !important;
+}
 /* navigation bar */
 
 .navbar {
@@ -102,3 +104,35 @@ h1, h2, h3, h4, h5, h6 {
     color: black;
 }
 
+/* services */
+#services {
+    margin-top: 100px;
+}
+#services i {
+    font-size: 60px;
+    color: white;
+    background: var(--orange);
+    padding: 50px;
+    transition: var(--transition);
+}
+#services i:hover {
+    color: var(--orange);
+    background: black;
+}
+
+.title h2 {
+    font-size: 40px;
+    text-transform: uppercase;
+    color: var(--orange);
+}
+#services .fa-apple {
+    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+}
+
+#services .fa-android {
+    clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);    
+}
+#services .fa-php {
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);}
+#services .fa-js {
+    clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);}
