--- a/style.css
+++ b/style.css
@@ -128,11 +128,49 @@ h1, h2, h3, h4, h5, h6 {
 #services .fa-apple {
     clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
 }
-
 #services .fa-android {
     clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);    
 }
 #services .fa-php {
-    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);}
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+}
 #services .fa-js {
-    clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);}
+    clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+}
+
+#newsletter {
+    background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(img/contact.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 70vh;
+    clip-path: polygon(0 20%, 100% 0%, 100% 80%, 0% 100%);
+    color: white;
+}
+#newsletter h2 {
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+#newsletter input {
+    background: transparent;
+    border: none;
+    border-bottom: 3px solid white;
+    border-radius: 0;
+    font-size: 1.5rem;
+    color: white;
+}
+#newsletter button {
+    text-decoration: none;
+    font-size: 20px;
+    padding: 15px 25px;
+    border: 2px solid var(--orange);
+    background: transparent;
+    text-transform: uppercase;
+    color: var(--orange);
+    margin: 0 10px;
+    transition: var(--transition);
+}
+#newsletter button:hover {
+    background: var(--orange);
+    color: black;
+}
