--- a/style.css
+++ b/style.css
@@ -220,3 +220,66 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0a4";
     padding: 10px;
 }
+
+#projects {
+    padding-top: 50px;
+}
+#projects .col-md-3{
+    padding: 0;
+}
+#projects .imgContainer {
+    position: relative;
+    background: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7));
+    overflow: hidden;
+}
+#projects .imgContainer img:hover {
+    opacity: .7;
+    cursor: pointer;
+    transition: var(--transition);
+}
+#projects .imgIcons {
+    position: absolute;
+    bottom: -10rem;
+    background: linear-gradient(rgba(255,255,255,.7),rgba(255,255,255,.7));
+    width: 100%;
+    transition-duration: 0.5s;
+    text-align: center;
+    padding: 10px 0;
+}
+
+#projects .imgContainer:hover .imgIcons {
+    bottom: 0;
+}
+
+#projects i {
+    color: var(--orange);
+    font-size: 2rem;
+    margin: 0 10px;
+    transition: var(--transition);
+}
+#projects i:hover {
+    color: var(--grayish);
+}
+
+#people img {
+    border-radius: 50%;
+    width: 80%;
+    margin: -100px auto 0 auto;
+}
+#people .row:nth-child(2) {
+    margin-top: 100px;
+}
+#people hr {
+    background: var(--orange);
+    border: none;
+    height: 1px;
+}
+#people i {
+    color: var(--orange);
+    font-size: 30px;
+    margin: 0 5px;
+    transition: var(--transition);
+}
+#people i:hover {
+    color: var(--grayish);
+}
